# rt-comp

./: Cargo.toml  README.md
docs/: Program Architecture.canvas
examples/: triangle.rs
shaders/: test.comp.glsl
src/: element.rs  lib.rs  renderer.rs  shaders.rs  signal_handler.rs
src/element/: plane.rs  sphere.rs
src/renderer/: context.rs  gui.rs
