[package]
name = "rt-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
chrono = "0.4.24"
vulkano = "0.33.0"
vulkano-win = "0.33.0"
vulkano-shaders = "0.33.0"
image = "0.24.6"
winit = "0.28.6"
simplelog = "0.12.1"
log = "0.4.17"
